--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "screenviewer",
+  "name": "responsiveness-tracker",
+  "homepage": "https://hyperloo.github.io/responsivenesstracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -31,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
